# Git-minus

./: .gitignore  CMakeLists.txt  README.md
include/: command.h  committree.h  filearr.h  filemanage.h  filetree.h  gitm.h  macros.h  pair.h  structures.h
src/: command.c  committree.c  filearr.c  filemanage.c  filetree.c  gitm.c  main.c  pair.c  utils.c
